# langfuse

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
notebooks/: 01_setup_and_first_trace.ipynb  01_setup_e_primeiro_trace.ipynb  02_rag_pipeline.ipynb  03_prompt_and_sessions.ipynb  03_prompt_e_sessions.ipynb  04_evaluation.ipynb  04_evaluation_em_escala.ipynb  05_opentelemetry.ipynb  06_BONUS_prompt_manager.ipynb  06_Bonus_prompt_template.ipynb
prompts/: for_example.j2  if_example.j2
prompts/templates/: for_example.j2  if_example.j2
src/langfuse_demo/: client.py  config.py  eval.py  llm.py  prompt_template.py  rag.py
