[project]
name = "langfuse-demo"
version = "0.1.0"
description = "Langfuse Demo — Data Scientists Handover"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=3.0",
    "groq>=0.11",
    "openinference-instrumentation-groq>=0.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "python-frontmatter>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
